src/core-crm/objects/Marketing_Staging__c/Marketing_Staging__c.object-meta.xml
<CustomObject>
    <label>Marketing Staging</label>
    <nameField>
        <displayFormat>MS - {000000000}</displayFormat>
        <label>Marketing Staging Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Marketing Stagings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>