src/core-crm/objects/Marketing_Staging__c/fields/Admission_Category__c.field-meta.xml
<CustomField>
    <fullName>Admission_Category__c</fullName>
    <description>The way the application was submitted - either directly or via QTAC.</description>
    <label>Admission Category</label>
    <length>80</length>
    <type>Text</type>
</CustomField>