src/core-crm/objects/Marketing_Staging__c/fields/Admission_Process__c.field-meta.xml
<CustomField>
    <fullName>Admission_Process__c</fullName>
    <label>Admission Process</label>
    <length>80</length>
    <type>Text</type>
</CustomField>