src/core-crm/objects/Marketing_Staging__c/fields/Admission_Year__c.field-meta.xml
<CustomField>
    <fullName>Admission_Year__c</fullName>
    <description>Indicates the year the prospective student expects/wants to commence their studies.</description>
    <label>Admission Year</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>