src/core-crm/objects/Marketing_Staging__c/fields/Agency_Branch__c.field-meta.xml
<CustomField>
    <fullName>Agency_Branch__c</fullName>
    <description>Agency branch.</description>
    <label>Agency Branch</label>
    <length>80</length>
    <type>Text</type>
</CustomField>