src/core-crm/objects/Marketing_Staging__c/fields/Agency_Code__c.field-meta.xml
<CustomField>
    <fullName>Agency_Code__c</fullName>
    <description>Agency Code</description>
    <label>Agency Code</label>
    <length>80</length>
    <type>Text</type>
</CustomField>