src/core-crm/objects/Marketing_Staging__c/fields/Agency_Country__c.field-meta.xml
<CustomField>
    <fullName>Agency_Country__c</fullName>
    <description>Agency country.</description>
    <label>Agency Country</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Country</valueSetName>
    </valueSet>
</CustomField>