src/core-crm/objects/Marketing_Staging__c/fields/Applicant_Id__c.field-meta.xml
<CustomField>
    <fullName>Applicant_Id__c</fullName>
    <description>The Source System Id for a Studylink (SL_APPLICANT_ID) or QTAC applicant (Applicant Id). This is not an Id for the study application.</description>
    <label>Applicant Id</label>
    <length>80</length>
    <type>Text</type>
</CustomField>