src/core-crm/objects/Marketing_Staging__c/fields/Application_Condition_Verification_Statu__c.field-meta.xml
<CustomField>
    <fullName>Application_Condition_Verification_Statu__c</fullName>
    <label>Application Condition Verification Statu</label>
    <length>80</length>
    <type>Text</type>
</CustomField>