src/core-crm/objects/Marketing_Staging__c/fields/Application_Number__c.field-meta.xml
<CustomField>
    <fullName>Application_Number__c</fullName>
    <label>Application Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>