src/core-crm/objects/Marketing_Staging__c/fields/Application_Source__c.field-meta.xml
<CustomField>
    <fullName>Application_Source__c</fullName>
    <description>Indicates which system the study application has originated from. Three possible values are: SAMS, Studylink or QTAC.</description>
    <label>Application Source</label>
    <length>80</length>
    <type>Text</type>
</CustomField>