src/core-crm/objects/Marketing_Staging__c/fields/Application_Status__c.field-meta.xml
<CustomField>
    <fullName>Application_Status__c</fullName>
    <description>The status of an application.</description>
    <label>Application Status</label>
    <length>80</length>
    <type>Text</type>
</CustomField>