src/core-crm/objects/Marketing_Staging__c/fields/Consent_Source__c.field-meta.xml
<CustomField>
    <fullName>Consent_Source__c</fullName>
    <description>Lower level value for identifying where the Consent came from.</description>
    <label>Consent Source</label>
    <length>80</length>
    <type>Text</type>
</CustomField>