src/core-crm/objects/Marketing_Staging__c/fields/Country_Of_Residence__c.field-meta.xml
<CustomField>
    <fullName>Country_Of_Residence__c</fullName>
    <label>Country Of Residence</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Country</valueSetName>
    </valueSet>
</CustomField>