src/core-crm/objects/Marketing_Staging__c/fields/Course_Level__c.field-meta.xml
<CustomField>
    <fullName>Course_Level__c</fullName>
    <description>Applicant&apos;s course level. This is similar to Study Level, but this list is a lower grain i.e. possibly sub-types of the Study Level values.</description>
    <label>Course Level</label>
    <length>80</length>
    <type>Text</type>
</CustomField>