src/core-crm/objects/Marketing_Staging__c/fields/Course_Name__c.field-meta.xml
<CustomField>
    <fullName>Course_Name__c</fullName>
    <description>The Name given to the Course by QUT that the is being applied for</description>
    <label>Course Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>