src/core-crm/objects/Marketing_Staging__c/fields/Course_Referrer__c.field-meta.xml
<CustomField>
    <fullName>Course_Referrer__c</fullName>
    <description>Captures the name of a referrer of a course (where applicable).</description>
    <label>Course Referrer</label>
    <length>80</length>
    <type>Text</type>
</CustomField>