src/core-crm/objects/Marketing_Staging__c/fields/Course_Start_Month__c.field-meta.xml
<CustomField>
    <fullName>Course_Start_Month__c</fullName>
    <description>QTAC File attrubute</description>
    <label>Course Start Month</label>
    <length>20</length>
    <type>Text</type>
</CustomField>