src/core-crm/objects/Marketing_Staging__c/fields/Dont_Market_DateTime__c.field-meta.xml
<CustomField>
    <fullName>Dont_Market_DateTime__c</fullName>
    <description>Controlled from the individual object</description>
    <label>Don&apos;t Market DateTime</label>
    <type>DateTime</type>
</CustomField>