src/core-crm/objects/Marketing_Staging__c/fields/Dont_Market_Reason__c.field-meta.xml
<CustomField>
    <fullName>Dont_Market_Reason__c</fullName>
    <description>Controlled from the individual object</description>
    <label>Don&apos;t Market Reason</label>
    <length>200</length>
    <type>Text</type>
</CustomField>