src/core-crm/objects/Marketing_Staging__c/fields/EAS_Application__c.field-meta.xml
<CustomField>
    <fullName>EAS_Application__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Identifies if the applicant is an Educational Access Scheme applicant.</description>
    <label>EAS Application</label>
    <type>Checkbox</type>
</CustomField>