src/core-crm/objects/Marketing_Staging__c/fields/EDM_Last_Clicked_DateTime__c.field-meta.xml
<CustomField>
    <fullName>EDM_Last_Clicked_DateTime__c</fullName>
    <description>Migration Only</description>
    <label>EDM Last Clicked DateTime</label>
    <type>DateTime</type>
</CustomField>