src/core-crm/objects/Marketing_Staging__c/fields/Educational_Disruption_Applicant__c.field-meta.xml
<CustomField>
    <fullName>Educational_Disruption_Applicant__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Identifies if the applicant is an Educational Disruption applicant.</description>
    <label>Educational Disruption Applicant</label>
    <type>Checkbox</type>
</CustomField>