src/core-crm/objects/Marketing_Staging__c/fields/Email_OptIn_DateTime__c.field-meta.xml
<CustomField>
    <fullName>Email_OptIn_DateTime__c</fullName>
    <description>The date/time the marketing person opted in to receive marketing comms via Email.</description>
    <label>Email Opt In DateTime</label>
    <type>DateTime</type>
</CustomField>