src/core-crm/objects/Marketing_Staging__c/fields/Email_OptOut_DateTime__c.field-meta.xml
<CustomField>
    <fullName>Email_OptOut_DateTime__c</fullName>
    <description>The date/time the marketing person opted out of receiving marketing comms via Email.</description>
    <label>Email Opt Out DateTime</label>
    <type>DateTime</type>
</CustomField>