src/core-crm/objects/Marketing_Staging__c/fields/Email_Unsub_JobID__c.field-meta.xml
<CustomField>
    <fullName>Email_Unsub_JobID__c</fullName>
    <label>Email Unsub JobID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>