src/core-crm/objects/Marketing_Staging__c/fields/English_Language_Difficulties_Applicant__c.field-meta.xml
<CustomField>
    <fullName>English_Language_Difficulties_Applicant__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Identifies if the applicant is an English Language Difficulties applicant.</description>
    <label>English Language Difficulties Applicant</label>
    <type>Checkbox</type>
</CustomField>