src/core-crm/objects/Marketing_Staging__c/fields/Enquiry_Type__c.field-meta.xml
<CustomField>
    <fullName>Enquiry_Type__c</fullName>
    <description>The type of enquiry received.</description>
    <label>Enquiry Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Application process</fullName>
            </value>
            <value>
                <fullName>Course information</fullName>
            </value>
            <value>
                <fullName>Entry requirements</fullName>
            </value>
            <value>
                <fullName>Fees</fullName>
            </value>
            <value>
                <fullName>Online study</fullName>
            </value>
            <value>
                <fullName>Scholarships</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>