src/core-crm/objects/Marketing_Staging__c/fields/Event_Agency_Host__c.field-meta.xml
<CustomField>
    <fullName>Event_Agency_Host__c</fullName>
    <defaultValue>false</defaultValue>
    <description>The name of the Agency hosting an event.</description>
    <label>Event Agency Host</label>
    <type>Checkbox</type>
</CustomField>