src/core-crm/objects/Marketing_Staging__c/fields/Event_City__c.field-meta.xml
<CustomField>
    <fullName>Event_City__c</fullName>
    <description>The city in which the event is held.</description>
    <label>Event City</label>
    <length>80</length>
    <type>Text</type>
</CustomField>