src/core-crm/objects/Marketing_Staging__c/fields/Event_Date__c.field-meta.xml
<CustomField>
    <fullName>Event_Date__c</fullName>
    <label>Event Date</label>
    <type>Date</type>
</CustomField>