src/core-crm/objects/Marketing_Staging__c/fields/Faculty__c.field-meta.xml
<CustomField>
    <fullName>Faculty__c</fullName>
    <description>Typically captures the owning course faculty, however additional values such as &apos;QUT College&apos; and &apos;University Wide&apos; (which are not part of the HRM Org Unit structure are required by marketing.</description>
    <label>Faculty</label>
    <length>80</length>
    <type>Text</type>
</CustomField>