src/core-crm/objects/Marketing_Staging__c/fields/Fee_Amount__c.field-meta.xml
<CustomField>
    <fullName>Fee_Amount__c</fullName>
    <description>The cost/fee for the course or event where applicable.</description>
    <label>Fee Amount</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>