src/core-crm/objects/Marketing_Staging__c/fields/HasOptedOutOfEmail__c.field-meta.xml
<CustomField>
    <fullName>HasOptedOutOfEmail__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Identifies whether the marketing person has provided their consent to receive marketing material via Email</description>
    <label>Email Opt Out</label>
    <type>Checkbox</type>
</CustomField>