src/core-crm/objects/Marketing_Staging__c/fields/Intake_Period_Type__c.field-meta.xml
<CustomField>
    <fullName>Intake_Period_Type__c</fullName>
    <description>Student&apos;s intake semester / period.</description>
    <label>Intake Period Type</label>
    <length>80</length>
    <type>Text</type>
</CustomField>