src/core-crm/objects/Marketing_Staging__c/fields/Interaction_DateTime__c.field-meta.xml
<CustomField>
    <fullName>Interaction_DateTime__c</fullName>
    <description>Date and Time that the interaction occurred.</description>
    <label>Interaction DateTime</label>
    <type>DateTime</type>
</CustomField>