src/core-crm/objects/Marketing_Staging__c/fields/Interaction_Type__c.field-meta.xml
<CustomField>
    <fullName>Interaction_Type__c</fullName>
    <label>Interaction Type</label>
    <length>80</length>
    <type>Text</type>
</CustomField>