src/core-crm/objects/Marketing_Staging__c/fields/IsApplying_for_Visa_Onshore__c.field-meta.xml
<CustomField>
    <fullName>IsApplying_for_Visa_Onshore__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates the applicant has an in-flight visa application being processed onshore.</description>
    <label>Is Applying for Visa Onshore</label>
    <type>Checkbox</type>
</CustomField>