src/core-crm/objects/Marketing_Staging__c/fields/IsOffer_Made__c.field-meta.xml
<CustomField>
    <fullName>IsOffer_Made__c</fullName>
    <defaultValue>false</defaultValue>
    <description>indicates the applicant has been made an offer in the relevant course (e.g. highest preference for QUT within the preference number range specified) from QUT.</description>
    <label>Is Offer Made</label>
    <type>Checkbox</type>
</CustomField>