src/core-crm/objects/Marketing_Staging__c/fields/Lead_Source__c.field-meta.xml
<CustomField>
    <fullName>Lead_Source__c</fullName>
    <description>Lead Source is a sub-type of Lead Source Category. Business Process will need to include data quality considerations to ensure the integrity of the field values as this is a key field for marketing.</description>
    <label>Lead Source</label>
    <length>80</length>
    <type>Text</type>
</CustomField>