src/core-crm/objects/Marketing_Staging__c/fields/MarketingStaging_Mobile_Locale__c.field-meta.xml
<CustomField>
    <fullName>MarketingStaging_Mobile_Locale__c</fullName>
    <label>Marketing Staging Mobile Locale</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Loqate_Locale</valueSetName>
    </valueSet>
</CustomField>