src/core-crm/objects/Marketing_Staging__c/fields/Migration_Key__c.field-meta.xml
<CustomField>
    <fullName>Migration_Key__c</fullName>
    <description>Used to link the migration record back to the source system record.</description>
    <label>Migration Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>