src/core-crm/objects/Marketing_Staging__c/fields/My_Citizenship_Status__c.field-meta.xml
<CustomField>
    <fullName>My_Citizenship_Status__c</fullName>
    <description>Profile Type = Myself

The Citizenship Status of a person. If &apos;Australian Citizen or Permanent Resident&apos; or &apos;New Zealand Citizen&apos; then Marketing considers the person to be a &apos;Domestic&apos; marketing person, otherwise if &apos;International Student&apos; the person is considered an International marketing person.</description>
    <label>My Citizenship Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Australian Citizen or Permanent Resident</fullName>
            </value>
            <value>
                <fullName>New Zealand Citizen</fullName>
            </value>
            <value>
                <fullName>International Student</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>