src/core-crm/objects/Marketing_Staging__c/fields/My_Country_Of_Residency__c.field-meta.xml
<CustomField>
    <fullName>My_Country_Of_Residency__c</fullName>
    <description>Profile Type = Myself

Indicates the country an international student is living in.</description>
    <label>My Country Of Residency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Country</valueSetName>
    </valueSet>
</CustomField>