src/core-crm/objects/Marketing_Staging__c/fields/My_Double_Degree__c.field-meta.xml
<CustomField>
    <fullName>My_Double_Degree__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Profile Type = Myself

Indicates whether the marketing person is interested in receiving information about double degrees.</description>
    <label>My Double Degree</label>
    <type>Checkbox</type>
</CustomField>