src/core-crm/objects/Marketing_Staging__c/fields/My_Expected_Admission_Year__c.field-meta.xml
<CustomField>
    <fullName>My_Expected_Admission_Year__c</fullName>
    <description>Profile Type = Myself

Indicates the year the prospective student expects/wants to commence their studies.</description>
    <label>My Expected Admission Year</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>