src/core-crm/objects/Marketing_Staging__c/fields/My_Indigenous_Status_ATSI__c.field-meta.xml
<CustomField>
    <fullName>My_Indigenous_Status_ATSI__c</fullName>
    <label>My Indigenous Status (ATSI)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Non indigenous – neither Aboriginal nor Torres Strait Islander origin</fullName>
            </value>
            <value>
                <fullName>Of Torres Strait Islander origin but not Aboriginal</fullName>
            </value>
            <value>
                <fullName>Both Aboriginal and Torres Strait Islander origin</fullName>
            </value>
            <value>
                <fullName>No information</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>