src/core-crm/objects/Marketing_Staging__c/fields/My_Industry__c.field-meta.xml
<CustomField>
    <fullName>My_Industry__c</fullName>
    <description>Profile Type = Myself

The industry classification assigned to an organization which describes the predominant business activity.
Refer to Australian and New Zealand Standard Industrial Classification (ANZSIC), 2006 (Revision 2.0), ABS Catalogue No 1292.0 or NAT 1827-6:2014 (BIC)</description>
    <label>My Industry</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A - Agriculture, Forestry and Fishing</fullName>
            </value>
            <value>
                <fullName>B - Mining</fullName>
            </value>
            <value>
                <fullName>C - Manufacturing</fullName>
            </value>
            <value>
                <fullName>D - Electricity, Gas, Water and Waste Services</fullName>
            </value>
            <value>
                <fullName>E - Construction</fullName>
            </value>
            <value>
                <fullName>F - Wholesale Trade</fullName>
            </value>
            <value>
                <fullName>G - Retail Trade</fullName>
            </value>
            <value>
                <fullName>H - Accommodation and Food Services</fullName>
            </value>
            <value>
                <fullName>I - Transport, Postal and Warehousing</fullName>
            </value>
            <value>
                <fullName>J - Information Media and Telecommunications</fullName>
            </value>
            <value>
                <fullName>K - Financial and Insurance Services</fullName>
            </value>
            <value>
                <fullName>L - Rental, Hiring and Real Estate Services</fullName>
            </value>
            <value>
                <fullName>M - Professional, Scientific and Technical Services</fullName>
            </value>
            <value>
                <fullName>N - Administrative and Support Services</fullName>
            </value>
            <value>
                <fullName>O - Public Administration and Safety</fullName>
            </value>
            <value>
                <fullName>P - Education and Training</fullName>
            </value>
            <value>
                <fullName>Q - Health Care and Social Assistance</fullName>
            </value>
            <value>
                <fullName>R - Arts and Recreation Services</fullName>
            </value>
            <value>
                <fullName>S - Other Services</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>