src/core-crm/objects/Marketing_Staging__c/fields/My_Interested_English_Pathways__c.field-meta.xml
<CustomField>
    <fullName>My_Interested_English_Pathways__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Profile Type = Myself

        Indicates whether the marketing person is interested in receiving information about English programs and/or Pathway Programs specifically for International Students.</description>
    <label>My Interested English Pathways</label>
    <type>Checkbox</type>
</CustomField>