src/core-crm/objects/Marketing_Staging__c/fields/My_Interested_ESport_Interest__c.field-meta.xml
<CustomField>
    <fullName>My_Interested_ESport_Interest__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Profile Type = Myself

Indicates if the marketing person is interested in receiving information about QUT&apos;s E-Sports program.</description>
    <label>My Interested E-Sport Interest</label>
    <type>Checkbox</type>
</CustomField>