src/core-crm/objects/Marketing_Staging__c/fields/My_Interested_Financial_Assistance__c.field-meta.xml
<CustomField>
    <fullName>My_Interested_Financial_Assistance__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Profile Type = Myself

Indicates if the marketing person is interested in receiving information about financial assistance options at QUT.</description>
    <label>My Interested Financial Assistance</label>
    <type>Checkbox</type>
</CustomField>