src/core-crm/objects/Marketing_Staging__c/fields/My_Interested_Languages__c.field-meta.xml
<CustomField>
    <fullName>My_Interested_Languages__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Profile Type = Myself

Indicates if the marketing person is interested in receiving information about QUT&apos;s langauage program</description>
    <label>My Interested Languages</label>
    <type>Checkbox</type>
</CustomField>